# ded-snapshots

./: CHANGES  COPYING  MANIFEST  Makefile  README  aclocal.m4  configure  configure.in  makefile.in  mkdirs.sh
certify/: Makefile  README  config.txt  makefile.in  release.txt
package/: ded-12.0.spec
package/debian/: changelog  control  copyright  rules  watch
src/: Makefile  README  boxchars.c  ccodes.rc  cnames.rc  ded.c  ded.h  ded.hlp  ded2s.c  dedblip.c  dedcmds.c  dedcolor.c  deddoit.c  deddump.c  dedfind.c  dedfree.c  dedline.c  dedmake.c  dedmsgs.c  dedname.c  dedrc  dedread.c  dedring.c  dedscan.c  dedshow.c  dedsigs.c  dedsize.c  dedsort.c  dedtags.c  dedtype.c  deduniq.c  dedview.c  dedwait.c  dlog.c  ftree.c  history.c  inline.c  makefile.2nd  makefile.in  modules  (+5 more)
test/: Makefile  README  edit_test.sed  edit_test.sh  edittest.sh  makefile.in  run_test.sh  test1.cmd  test2.cmd  test3.cmd  test4.cmd  test5.cmd  traceback.sh  walkback.sh
user/: Makefile  ded.man  makefile.in
