dnl Process this file with 'autoconf' to produce a 'configure' script
dnl $Id: configure.in,v 12.7 2010/06/30 23:19:41 tom Exp $
AC_REVISION($Revision: 12.7 $)
AC_PREREQ(2.13.20020210)
AC_INIT(src/ded.hlp)
CF_CHECK_CACHE

###	get special options

###	program paths
AC_PROG_CC
AC_PROG_CPP
AC_PROG_AWK
AC_PROG_INSTALL
AC_PROG_MAKE_SET
AC_PROG_RANLIB

###	extra things that we'll substitute in the makefile
CF_DISABLE_ECHO
CF_LIB_PREFIX
CF_FIND_TDLIB
CF_MAKE_AR_RULES
CF_MAKE_INCLUDE

### Compiler characteristics
CF_ENABLE_WARNINGS

### Headers

### DataTypes

### DataItems/Structs

### Program locations

AC_OUTPUT( \
	makefile \
	src/makefile \
	test/makefile \
	user/makefile,[
CF_SRC_MAKEFILE($srcdir,src)
],[
	AWK="$AWK"
	cf_cv_ar_rules="$cf_cv_ar_rules"
	make_include_left="$make_include_left"
	make_include_right="$make_include_right"
])
